Avoid checking Accumulo table exists before creation
* Create common enum to contain namespace and table names.
* Small modifications to several small methods to read clearer.
* Extract common creation of constraints table to common location.
* Replace use of System.out.println with logging.